Fixed overflow rule

--- a/src/sass/global.sass
+++ b/src/sass/global.sass
@@ -6,10 +6,10 @@
   padding: 0
   box-sizing: border-box
   -webkit-tap-highlight-color: transparent
-  overflow: hidden
 
 html
   overflow: hidden
+  height: 100vh
 
 body
   font-family: 'MADETOMMY', sans-serif
